--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>React Accordion</title>
+  <title>Load More Read More</title>
   <script src="https://kit.fontawesome.com/731c12ea5b.js" crossorigin="anonymous"></script>
 </head>
 
